kubernetes/gke/accessos-worker.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    app: worker 
  name: worker 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: accessos
      containers:
      - name: worker 
        image: accessos/worker:latest
        resources:
          limits:
            memory: 2048M 
            cpu: "1"
          requests:
            cpu: 400m 
            memory: 1024M
