kubernetes/gke/accessos-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: access
  name: access 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: access 
  template:
    metadata:
      labels:
        app: access
    spec:
      serviceAccountName: accessos
      containers:
      - name: access 
        image: accessos/access:latest
        resources:
          limits:
            memory: 2048M 
            cpu: "1"
          requests:
            cpu: 400m 
            memory: 1024M
        ports:
        - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: access
  name: access
spec:
  type: LoadBalancer
  ports:
  - name: "3000"
    port: 3000
    targetPort: 80
  selector:
    app: access
